--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,1 @@
-<h1>Welcome to the Home page</h1>
+<h1>Welcome to the Home page</h1><a href="/predictdata"><button>Click to predict data</button></a>
